--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -18,17 +18,32 @@
 					<fork>true</fork>
 				</configuration>
 			</plugin>
+
+
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
 				<version>2.1.0-SNAPSHOT</version>
 				<configuration>
 					<verbose>true</verbose>
+
+				<declaration>true</declaration>
 					<sourceMap>true</sourceMap>
 					<outDir>target/js</outDir>
 					<tsOut>target/ts</tsOut>
-					<targetVersion>ES5</targetVersion>
+					<!-- <tsOut>${project.basedir}/target</tsOut> -->
 					<candiesJsOut>target/candies</candiesJsOut>
+					
+					<targetVersion>ES6</targetVersion>
+					<module>es2015</module>
+
+					<includes>
+	 					<include>src/**/*.java</include> 
+					</includes>							
+					
+					<excludes>
+						<exclude>**/test/**</exclude>
+					</excludes>
 				</configuration>
 				<executions>
 					<execution>
